syntax = "proto3";
package erda.core.services.authentication.credentials.accesskey;
option go_package = "github.com/erda-project/erda-proto-go/core/services/authentication/credentials/accesskey/pb";

import "google/protobuf/timestamp.proto";

message AccessKeysItem {
  string                      id          = 1;
  string                      accessKey   = 2;
  string                      secretKey   = 3;
  StatusEnum.Status           status      = 4;
  SubjectTypeEnum.SubjectType subjectType = 5;
  string                      subject     = 6;
  string                      description = 7;
  google.protobuf.Timestamp   createdAt   = 8;
  string                      scope       = 9;
  string                      scopeId     = 10;
  string                      token       = 11;
  string                      creatorId   = 12;
}

message SubjectTypeEnum {
  enum SubjectType {
    NOT_SPECIFIED = 0; // TODO workaround for optional
    OTHER         = 1;
    SYSTEM        = 2;
    MICRO_SERVICE = 3;
    CLUSTER       = 4;
  }
}
message StatusEnum {
  enum Status {
    NOT_SPECIFIED = 0; // TODO workaround for optional
    ACTIVATE      = 1;
    DISABLED      = 2;
    DELETED       = 3;
  }
}
